增加环境光，可以跳跃

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
         canvas { width: 100%; height: 100% }
       </style>
       <script src="js/three.js"></script>
+      <script src="js/stats.js"></script>
       <!-- <script src="js/Projector.js"></script>
       <script src="js/CanvasRenderer.js"></script>
       <script src="js/stats.min.js"></script>
       <script src="js/obj/Bird.js"></script> -->
   </head>
   <body>
-    <div id="container"></div>
+    <div id="Stats-output">
+</div>
+<!-- Div which will hold the Output -->
+<div id="WebGL-output">
+</div>
 
     <script src="js/bundle.js"></script>
   </body>
