--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </style>
       <script src="js/three.js"></script>
       <script src="js/lib/stats.js"></script>
-      <script src="js/lib/data.gui.js"></script>
+      <script src="js/lib/dat.gui.js"></script>
       <!-- <script src="js/Projector.js"></script>
       <script src="js/CanvasRenderer.js"></script>
       <script src="js/stats.min.js"></script>
