--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <script src="js/three.js"></script>
       <script src="js/lib/stats.js"></script>
       <script src="js/lib/dat.gui.js"></script>
+      <script src="js/lib/ParaGeometries.js"></script>
+      <script src="js/lib/ConvexGeometry.js"></script>
       <!-- <script src="js/Projector.js"></script>
       <script src="js/CanvasRenderer.js"></script>
       <script src="js/stats.min.js"></script>
